--- a/ans.html
+++ b/ans.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>答案系統 - Answer System</title>
+  <title>Teacher Answer System</title>
   <style>
     body {
       font-family: "Microsoft JhengHei", Arial, sans-serif;
@@ -57,16 +57,16 @@
   </style>
 </head>
 <body>
-  <h1>📘 答案系統 Answer System</h1>
+  <h1>📘 Teacher Answer System</h1>
   <div class="button-container">
-    <a href="bio1.html" class="btn">Bio Set 1</a>
-    <a href="bio2.html" class="btn">Bio Set 2</a>
-    <a href="bio3.html" class="btn">Bio Set 3</a>
-    <a href="ch1.html" class="btn">Chem Set 1</a>
-    <a href="ch2.html" class="btn">Chem Set 2</a>
-    <a href="phy1.html" class="btn">Phy Set 1</a>
-    <a href="phy2.html" class="btn">Phy Set 2</a>
+    <a href="https://missk527.github.io/t/bio1.html" class="btn">Bio Set 1</a>
+    <a href="https://missk527.github.io/t/bio2.html" class="btn">Bio Set 2</a>
+    <a href="https://missk527.github.io/t/bio3.html" class="btn">Bio Set 3</a>
+    <a href="https://missk527.github.io/t/ch1.html" class="btn">Chem Set 1</a>
+    <a href="https://missk527.github.io/t/ch2.html" class="btn">Chem Set 2</a>
+    <a href="https://missk527.github.io/t/https://missk527.github.io/t/phy1.html" class="btn">Phy Set 1</a>
+    <a href="https://missk527.github.io/t/phy2.html" class="btn">Phy Set 2</a>
   </div>
-  <footer>© 2025 答案系統 | 綠白柔和版</footer>
+  <footer>© 2025 Miss K| answer system</footer>
 </body>
 </html>
