--- a/tommy.html
+++ b/tommy.html
@@ -59,7 +59,7 @@
 <body>
   <h1>📘 Teacher Answer System</h1>
   <div class="button-container">
-    <a href="https://missk527.github.io/t/https://missk527.github.io/t/phy1.html" class="btn">Phy Set 1</a>
+    <a href="https://missk527.github.io/t/phy1.html" class="btn">Phy Set 1</a>
     <a href="https://missk527.github.io/t/phy2.html" class="btn">Phy Set 2</a>
   </div>
   <footer>© 2025 Miss K| answer system</footer>
