--- a/ans.html
+++ b/ans.html
@@ -64,7 +64,7 @@
     <a href="https://missk527.github.io/t/bio3.html" class="btn">Bio Set 3</a>
     <a href="https://missk527.github.io/t/ch1.html" class="btn">Chem Set 1</a>
     <a href="https://missk527.github.io/t/ch2.html" class="btn">Chem Set 2</a>
-    <a href="https://missk527.github.io/t/https://missk527.github.io/t/phy1.html" class="btn">Phy Set 1</a>
+    <a href="https://missk527.github.io/t/phy1.html" class="btn">Phy Set 1</a>
     <a href="https://missk527.github.io/t/phy2.html" class="btn">Phy Set 2</a>
   </div>
   <footer>© 2025 Miss K| answer system</footer>
