--- a/11.html
+++ b/11.html
@@ -59,18 +59,18 @@
 <body>
   <h1>📘 Teacher Answer System</h1>
   <div class="button-container">
-    <a href="https://missk527.github.io/t/2eng.html" class="btn">Y2 Eng</a>
+    <a href="https://missk527.github.io/t/2eng.html" class="btn">Y2 English</a>
     <a href="https://missk527.github.io/t/2math.html" class="btn">Y2 Math</a>
-    <a href="https://missk527.github.io/t/2ver.html" class="btn">Y2 Ver</a>
-    <a href="https://missk527.github.io/t/3eng.html" class="btn">Y3+ Eng</a>
+    <a href="https://missk527.github.io/t/2ver.html" class="btn">Y2 Verbal</a>
+    <a href="https://missk527.github.io/t/3eng.html" class="btn">Y3+ English</a>
     <a href="https://missk527.github.io/t/3math.html" class="btn">Y3+ Math</a>
-    <a href="https://missk527.github.io/t/3ver.html" class="btn">Y3+ Ver</a>
-    <a href="https://missk527.github.io/t/4eng.html" class="btn">L4 Eng</a>
+    <a href="https://missk527.github.io/t/3ver.html" class="btn">Y3+ Verbal</a>
+    <a href="https://missk527.github.io/t/4eng.html" class="btn">L4 English</a>
     <a href="https://missk527.github.io/t/4math.html" class="btn">L4 Math</a>
-    <a href="https://missk527.github.io/t/4ver.html" class="btn">L4 Ver</a>
-    <a href="https://missk527.github.io/t/5eng.html" class="btn">L5 Eng</a>
+    <a href="https://missk527.github.io/t/4ver.html" class="btn">L4 Verbal</a>
+    <a href="https://missk527.github.io/t/5eng.html" class="btn">L5 English</a>
     <a href="https://missk527.github.io/t/5math.html" class="btn">L5 Math</a>
-    <a href="https://missk527.github.io/t/5ver.html" class="btn">L5 Ver</a>
+    <a href="https://missk527.github.io/t/5ver.html" class="btn">L5 Verbal</a>
   </div>
  
 </body>
