--- a/matt.html
+++ b/matt.html
@@ -59,9 +59,7 @@
 <body>
   <h1>📘 Teacher Answer System</h1>
   <div class="button-container">
-    <a href="https://missk527.github.io/t/phy12.html" class="btn">Phy Set 1</a>
-    <a href="https://missk527.github.io/t/phy56.html" class="btn">Phy Set 2</a>
-    <a href="https://missk527.github.io/t/phy4.html" class="btn">Y7</a>
+    <a href="https://missk527.github.io/t/bio5.html" class="btn">Y7</a>
   </div>
   <footer>© 2025 Miss K| answer system</footer>
 </body>
